[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.102", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }


[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true
panic = "abort"
