[package]
name = "word_saver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.102", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
arboard = "3.6.1"
clipboard-master = "4.0.0"
crossterm = "0.29.0"


[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
panic = "abort"
