[package]
name = "word_saver"
version = "0.1.2"
edition = "2024"
authors = ["Lixtr <spetesq@gmail.com>"]
description = "A minimalist CLI tool to collect words into decks"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/spetesq-sketch/word-saver"
keywords = ["vocabulary", "clipboard", "anki", "cli", "language-learning"]
categories = ["command-line-utilities", "text-processing"]


[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
serde = { version = "1.0.102", default-features = false, features = [
  "derive",
  "std",
] }
toml = { version = "1.1.2", default-features = false, features = [
  "serde",
  "parse",
  "display",
] }
dirs = "6.0.0"

clap = { version = "4.6.1", default-features = false, features = [
  "std",
  "derive",
  "help",
  "error-context",
] }

arboard = { version = "3.6.1", default-features = false, features = [
  "wayland-data-control",
] }

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
panic = "abort"
